<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="lang">en</string>
    <string name="today">today</string>
    <string name="detail">Detail 24h</string>
    <string name="aweek">A week</string>
    <string name="feellike">Feeling like:</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="current">Detail</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind speed</string>
    <string name="clouds">Clouds</string>
    <string name="temp">Temperature</string>
    <string name="rain">Rain</string>
    <string name="confirm">Confirm</string>
    <string name="message_confirm">You have not enabled location!</string>
    <string name="search">Search...</string>
    <string name="notification">Notification</string>
    <string name="message_notification">Could not find the address</string>
    <string name="chart">Temperature chart in 24h:</string>
    <string name="wind_deg">Wind direction</string>
    <string name="pressure">Atmospheric pressure</string>
    <string name="sunrise">Sunrise time</string>
    <string name="sunset">Sunset time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>