<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="28/6/2020"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="Hà Nội"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@color/graphview"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="36°"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_70sdp" />

                    <TextView
                        android:id="@+id/tvMinMax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="30° - 42°"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_17sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feellike"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                        <TextView
                            android:id="@+id/tvFeelLikes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:text="40°"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgIcon"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/tvDecs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="May den u am"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20sdp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/chart"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/current"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/graphview"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_text"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="left"
                        android:layout_weight="1.5"
                        android:src="@drawable/hygrometer" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/humidity"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tvHum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_text"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="left"
                        android:layout_weight="1.5"
                        android:src="@drawable/cloud" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/clouds"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tvClouds"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_text"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="left"
                        android:layout_weight="1.5"
                        android:src="@drawable/wind" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/wind"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tvWindspeed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_text"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="left"
                        android:layout_weight="1.5"
                        android:src="@drawable/windgauge" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/wind_deg"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tvWinddeg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_text"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="left"
                        android:layout_weight="1.5"
                        android:src="@drawable/pressure" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/pressure"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tvPress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_text"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="left"
                        android:layout_weight="1.5"
                        android:src="@drawable/sunrise" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/sunrise"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tvSunrise"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingRight="@dimen/_5sdp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="left"
                        android:layout_weight="1.5"
                        android:src="@drawable/sunset" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/sunset"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:id="@+id/tvSunset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:gravity="right"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>