<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@color/item_weather"
        android:padding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDayofWeek"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thu nam, 9 Th7"
            android:textColor="@color/text_weather"
            android:textSize="@dimen/_18sdp" />

        <LinearLayout
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mua nhe"
                    android:textColor="@color/text_weather"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/text_weather"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/tvHumOfDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="50%"
                        android:textColor="@color/text_weather"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clouds"
                        android:textColor="@color/text_weather"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/tvCloudOfDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="50%"
                        android:textColor="@color/text_weather"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/text_weather"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/tvWinOfDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="5 m/s"
                        android:textColor="@color/text_weather"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgStatus"
                android:layout_width="0dp"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvTempMax"
                    android:text="35"
                    android:textColor="@color/text_weather"
                    android:textSize="@dimen/_14sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvTempMin"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="29"
                    android:textColor="@color/text_weather"
                    android:textSize="@dimen/_14sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>